--- a/src/template.html
+++ b/src/template.html
@@ -5,5 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
-    <body></body>
+    <body>
+        <button id="creator">Create Entry</button>
+    </body>
 </html>
