--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,6 @@
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
-        <button id="creator">Create Entry</button>
+        <button id="creator">Import Data</button>
     </body>
 </html>
