--- a/src/template.html
+++ b/src/template.html
@@ -6,39 +6,52 @@
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
-        <div class="instructions"></div>
-        <form>
-            <label for="api_key">API Key</label>
-            <input
-                type="text"
-                required
-                name="api_key"
-                id="api_key"
-                placeholder="API Key"
-            />
-            <label for="api_key">Board ID</label>
-            <input
-                type="text"
-                required
-                name="board_id"
-                id="board_id"
-                placeholder="Board ID"
-            />
-            <div id="drop_zone">
-                <label for="api_key">Data File</label>
-                <input
-                    type="file"
-                    required
-                    name="data_file"
-                    id="data_file"
-                    placeholder=""
-                />
+        <div class="header">
+            <div class="logo">
+                <img class="padlet_logo" src="" alt="Padlet Logo" />
             </div>
-            <button id="import" type="button">Import Data</button>
-        </form>
+            <h1>Padlet Importer</h1>
+        </div>
+        <div class="main">
+            <div class="instructions"></div>
+            <form>
+                <label for="api_key">API Key</label>
+                <input
+                    type="text"
+                    required
+                    name="api_key"
+                    id="api_key"
+                    placeholder="API Key"
+                />
+                <label for="api_key">Board ID</label>
+                <input
+                    type="text"
+                    required
+                    name="board_id"
+                    id="board_id"
+                    placeholder="Board ID"
+                />
+                <div id="drop_zone">
+                    <label for="api_key">Data File</label>
+                    <input
+                        type="file"
+                        required
+                        name="data_file"
+                        id="data_file"
+                        placeholder=""
+                        multiple
+                    />
+                </div>
+                <button id="import" type="button">Import Data</button>
+            </form>
 
-        <div class="importing hidden">
-            <h2>Importing</h2>
+            <!-- Loading Screen -->
+            <div class="importing hidden">
+                <div class="container">
+                    <h2>Importing</h2>
+                    <div class="ldBar" id="ldBar" data-value="50"></div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
