--- a/src/template.html
+++ b/src/template.html
@@ -169,7 +169,7 @@
                 </ol>
             </div>
         </div>
-        <div class="pop click-backdrop disclaimer hidden">
+        <div class="pop click-backdrop disclaimer">
             <div class="container">
                 <button class="closer">x</button>
                 <h2>Non-affiliate Disclaimer</h2>
