--- a/src/template.html
+++ b/src/template.html
@@ -171,7 +171,7 @@
         </div>
         <div class="pop click-backdrop disclaimer">
             <div class="container">
-                <button class="closer">x</button>
+                <button class="closer"></button>
                 <h2>Non-affiliate Disclaimer</h2>
                 <div>
                     This web site is not endorsed by, directly affiliated with,
