--- a/src/template.html
+++ b/src/template.html
@@ -43,16 +43,20 @@
                         >read the instructions</a
                     >.
                 </div>
-                <div class="upload">
-                    <input
-                        type="file"
-                        required
-                        name="data_file"
-                        id="data_file"
-                        accept=".csv"
-                        placeholder=""
-                        multiple
-                    />
+                <div id="drop_zone">
+                    <div class="upload">
+                        <div>Drag & Drop File(s)</div>
+                        <input
+                            type="file"
+                            required
+                            name="data_file"
+                            id="data_file"
+                            accept=".csv"
+                            placeholder=""
+                            multiple
+                        />
+                        <div class="support">Supports: CSV</div>
+                    </div>
                 </div>
                 <button id="import" type="button">Import Data</button>
             </form>
