--- a/src/template.html
+++ b/src/template.html
@@ -93,7 +93,7 @@
         </div>
         <div id="instructions" class="pop click-backdrop instructions hidden">
             <div class="container">
-                <button class="closer">x</button>
+                <button class="closer"></button>
                 <h2>Instructions before you upload</h2>
                 <ol>
                     <li>
