--- a/src/template.html
+++ b/src/template.html
@@ -63,7 +63,7 @@
                         target="_blank"
                         title="Github: daniel-citrus"
                         ><img
-                            src="https://listofthingstodo.netlify.app/4541c153c1818e5b60df.png"
+                            src="<%=require('/src/style/logo/github-mark.png')%>"
                             alt="Github"
                             class="logoImage"
                     /></a>
@@ -103,7 +103,7 @@
                                 Ensure that your CSV file contains headers for
                                 each column.
                                 <img
-                                    src="/src/style/images/CSV Data with Header.png"
+                                    src="<%=require('/src/style/images/CSV Data with Header.png')%>"
                                     alt="CSV file with with Headers"
                                 />
                             </li>
@@ -122,7 +122,7 @@
                                     </li>
                                 </ul>
                                 <img
-                                    src="/src/style/images/Padlet Layout Settings.png"
+                                    src="<%=require('/src/style/images/Padlet Layout Settings.png')%>"
                                     alt="Padlet layout settings"
                                 />
                             </li>
@@ -141,7 +141,7 @@
                                 </ul>
                             </li>
                             <img
-                                src="/src/style/images/Padlet Board.png"
+                                src="<%=require('/src/style/images/Padlet Board.png')%>"
                                 alt="Padlet Board with Sections"
                             />
                         </ol>
@@ -152,7 +152,7 @@
                             <li>Complete the form</li>
                             <li>Upload your CSV file(s).</li>
                             <img
-                                src="/src/style/images/importing.gif"
+                                src="<%=require('/src/style/images/CSV Data with Header.png')%>"
                                 alt="Padlet Importer populating Padlet Board"
                             />
                         </ol>
