--- a/src/template.html
+++ b/src/template.html
@@ -152,7 +152,7 @@
                             <li>Complete the form</li>
                             <li>Upload your CSV file(s).</li>
                             <img
-                                src="<%=require('/src/style/images/CSV Data with Header.png')%>"
+                                src="<%=require('/src/style/images/importing.gif')%>"
                                 alt="Padlet Importer populating Padlet Board"
                             />
                         </ol>
